--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
 }
 
 .search-bar input {
-    width: 80%;
+    width: 100%;
 }
 
 .video-item img {
@@ -12,10 +12,11 @@
 }
 
 .video-detail .details {
-    margin-top: 10px;
-    padding: 10px;
+    margin-top: -3px;
+    padding: 20px;
     border: 1px solid #ddd;
     border-radius: 4px;
+    margin-bottom: 20px;
 }
 
 
